tg-2746 [BE] nuevo endpoint para obtener estado de un episodio

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -130,7 +130,7 @@ outpatient.appointment.valid=El paciente no tiene un turno  asociado
 
 ####### Sector #######
 sector.parentOfItself= Un sector no puede ser padre de sí mismo
-sector.mandatoryCareType: "El tipo de cuidado es obligatorio para ese tipo de organización de sector"
+sector.mandatoryCareType= El tipo de cuidado es obligatorio para ese tipo de organización de sector
 
 ####### Diary #######
 diary.error.validation=Error de validación
@@ -166,6 +166,7 @@ health-insurance.not.found = La obra social no existe
 
 ####### Emergency Care Episode #######
 careepisode.not.found = El episodio de guardia no se encontró o no existe
+state.not.found=El estado no se encontró o no existe
 
 ####### Date #######
 date-dto.invalid = El día ingresado no existe en el mes
