--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -151,6 +151,7 @@ health-insurance.not.found = Health Insurance does not exists
 
 ####### Emergency Care Episode #######
 careepisode.not.found = The episode was not found or does not exist
+state.not.found = Status was not found or does not exist
 
 ####### Date #######
 date-dto.invalid-day = Day doesn't exists in month
