tg-2789 agrega seccion Historial de triages en episodio de guardia

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -107,6 +107,7 @@
 				"POLICE_INTERVENTION": "Intervención policial"
 			},
 			"triage": {
+				"HISTORIAL": "Historial de triages",
 				"ultimo": {
 					"TITLE": "Último triage",
 					"NIVEL": "Nivel de urgencia",
