tg-2845 [FE] Agrega filtros en Medicamentos

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -241,6 +241,11 @@
 					"COMPLETE":"Completar",
 					"DELETE":"Eliminar",
 					"REACTIVATE": "Reactivar"
+				},
+				"filter": {
+					"STATE":"Estado",
+					"MEDICATION":"Medicamento",
+					"PROBLEM":"Problema"
 				}
 			},
 			"profile": {
