tg-2882 Cambia label 'profesional' por 'realizado por' en detalle de triage

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -111,7 +111,7 @@
 				"ultimo": {
 					"TITLE": "Último triage",
 					"NIVEL": "Nivel de urgencia",
-					"PROFESIONAL": "Profesional",
+					"REALIZADO_POR": "Realizado por",
 					"UBICACION": "Ubicación",
 					"APARIENCIA_RESPIRACION_CIRCULACION": "Apariencia, respiración y circulación",
 					"TEMPERATURA": "Temperatura",
