tg-2856 Implementa botón Nuevo Triage en detalle de episodio

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -108,6 +108,7 @@
 			},
 			"triage": {
 				"HISTORIAL": "Historial de triages",
+				"NUEVO": "Nuevo triage",
 				"ultimo": {
 					"TITLE": "Último triage",
 					"NIVEL": "Nivel de urgencia",
