tg-2877 [FE] Agrega filtros de estudios

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -260,7 +260,9 @@
 				"filter": {
 					"STATE":"Estado",
 					"MEDICATION":"Medicamento",
-					"PROBLEM":"Problema"
+					"PROBLEM":"Problema",
+					"CATEGORY":"Categoría",
+					"BUTTON_FILTER": "Aplicar filtro"
 				}
 			},
 			"profile": {
