--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -3,7 +3,9 @@
 		"new-episode": {
 			"TITLE": "Nuevo episodio",
 			"SUB_TITLE": "Complete los datos para continuar",
-			"ADM_TRIAGE": "Triage"
+			"ADM_TRIAGE": "Triage",
+			"SUCCESS": "El episodio fue creado exitosamente",
+			"ERROR": "Ocurrió un error al crear el episodio"
 		},
 		"triage": {
 			"APPEARANCE": "Apariencia",
