tg-2597 dropdown funcional con mock de backend

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -4,6 +4,9 @@
 			"TITLE": "Historia Clínica",
 			"SUBTITLE": "Complete los campos deseados"
 		},
+		"historia-clinica-externa": {
+			"TITLE": "Ver historia clínica externa"
+		},
 		"paciente": {
 			"TITLE": "Historia Clínica",
 			"card": {
