--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -1,5 +1,10 @@
 {
 	"ambulatoria": {
+		"bus-interoperabilidad": {
+			"TIMEOUT-MESSAGE": "Existe demora para obtener información externa, por favor consulte mas tarde",
+			"PACIENTE-NO-FEDERADO": "Este paciente no está federado en ninguna otra institución",
+			"PACIENTE-SIN-DATOS": "Este paciente no posee datos en la institución seleccionada"
+		},
 		"home": {
 			"TITLE": "Historia Clínica",
 			"SUBTITLE": "Complete los campos deseados"
