tg-2979 add settings option in menu only for root role

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -9,7 +9,8 @@
 			"INTERNACION": "Internación",
 			"PACIENTES": "Pacientes",
 			"PERFIL": "Mi cuenta",
-			"TURNOS": "Gestión de turnos"
+			"TURNOS": "Gestión de turnos",
+			"CONFIGURACION": "Configuración"
 		}
 	},
 	"buttons": {
