--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -84,10 +84,6 @@
 						},
 						"NUEVO_TRIAGE": "Nuevo triage"
 					},
-					"select_consultorio": {
-						"ATENDER": "Atender",
-						"CONSULTORIO": "Consultorio"
-					},
 					"patient": {
 						"ID": "ID Paciente",
 						"NO_INFO": "Sin información",
@@ -102,6 +98,11 @@
 		},
 		"episode": {
 			"TITLE": "Episodio de guardia",
+			"CANCEL_ATTENTION": "Cancelar atención",
+			"cancel_attention": {
+				"SUCCESS": "La atención fue cancelada exitosamente",
+				"ERROR": "Ocurrio un error al cancelar la atención"
+			},
 			"administrative": {
 				"EPISODE": "Episodio",
 				"REASONS": "Motivos de consulta",
@@ -136,6 +137,11 @@
 					"SUCCESS":"El paciente fue actualizado correctamente"
 				}
 			}
+		},
+		"select_consultorio": {
+			"ATENDER": "Atender",
+			"CONSULTORIO": "Consultorio",
+			"SUBTITLE": "Consultorio destino para el paciente"
 		},
 		"NO_INFO": "Sin información"
 	}
