tg-3016 implementa UserExternalService

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -2,8 +2,9 @@
 attribute.required=Atributo obligatorio
 value.mandatory=Valor obligatorio
 
-#### Create user ####
+#### User ####
 user.exists = Esta persona ya tiene un usuario
+user.not.found = Usuario no encontrado
 
 #### RequestUserDto ####
 name.mandatory=Nombre obligatorio
