tg-3022 [FE] Agrega input para busqueda por nombre en filtro de medicamentos - Ordenes

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -270,7 +270,8 @@
 				"filter": {
 					"STATE":"Estado",
 					"MEDICATION":"Medicamento",
-					"PROBLEM":"Problema",
+					"PROBLEM":"Problema asociado",
+					"STUDY":"Estudio",
 					"CATEGORY":"Categoría",
 					"BUTTON_FILTER": "Aplicar filtro"
 				}
