tg-3015 Limita a 1 la cantidad de episodios de guardia por institucion para un paciente dado

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -167,6 +167,7 @@ health-insurance.not.found = La obra social no existe
 
 ####### Emergency Care Episode #######
 careepisode.not.found = El episodio de guardia no se encontró o no existe
+care-episode.patient.invalid = El paciente ya posee un episodio de guardia activo
 state.not.found=El estado no se encontró o no existe
 
 ####### Date #######
