--- a/front-end/webapp/src/assets/i18n/configuracion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/configuracion/es-AR.json
@@ -6,9 +6,10 @@
 			"SUBTITLE_2": "Icono de página",
 			"SUBTITLE_3": "Iconos de escritorio",
 			"UPLOAD_FILE": "Adjuntar archivo",
+			"RESTORE": "Restablecer",
 			"logotipo": {
 				"DESCRIPTION": "El logotipo de auspiciante se ubicará en el encabezado alineado a la derecha en el mismo nivel de jerarquia que la marca de HSI.",
-				"IMAGE_FORMAT": "La imagen debe estar en formato .PNG y tener un tamaño máximo de 512 pixeles (ancho) x 128 pixeles (alto)."
+				"IMAGE_FORMAT": "La imagen debe estar en formato .PNG y tener un tamaño máximo de 512 x 128 pixeles."
 			},
 			"icono_pagina": {
 				"DESCRIPTION": "El ícono de página o favicon es la imagen que aparece antecediendo al título de la pestaña.",
