tg-3046 mostrar 'No' cuando no viene info sobre intervencion_policial

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -149,6 +149,7 @@
 			"CONSULTORIO": "Consultorio",
 			"SUBTITLE": "Consultorio destino para el paciente"
 		},
-		"NO_INFO": "Sin información"
+		"NO_INFO": "Sin información",
+		"NO": "No"
 	}
 }
