tg-3135 agrega cantidad de resultados a filtro de episodios

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -95,6 +95,12 @@
 						"TEMPORAL": "Paciente temporal"
 					}
 				},
+				"filters": {
+					"RESULTS": "Resultado: {{amount}} episodios",
+					"URGENCY": "Nivel de urgencia",
+					"TYPE": "Tipo de guardia"
+
+				},
 				"NEW_EPISODE": "Nuevo episodio",
 				"NO_DATA": "No existen episodios activos",
 				"TITLE": "Episodios de guardia"
