tg-3122 agrega mensaje para cuando no hay resultados al aplicar filtros episodios

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -103,6 +103,7 @@
 				},
 				"NEW_EPISODE": "Nuevo episodio",
 				"NO_DATA": "No existen episodios activos",
+				"NO_DATA_FOR_FILTER": "No existen episodios activos para la búsqueda seleccionada",
 				"TITLE": "Episodios de guardia"
 			},
 			"TITLE": "Guardia de emergencia"
