--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -23,6 +23,16 @@
 				"TITLE": "Nueva consulta",
 				"SUBTITLE": "Completa los siguientes datos.",
 				"TITLE_MENU": "Consulta",
+				"TENSION_SISTOLICA": "Tensión sistólica",
+				"TENSION_DIASTOLICA": "Tensión diastólica",
+				"TALLA": "Talla",
+				"PESO": "Peso",
+				"MOTIVO": "Motivos de consulta",
+				"PROBLEMA": "Problema de la consulta",
+				"REGRESAR": "Regresar y completar",
+				"CONFIRMAR": "Confirmar de todos modos",
+				"RECOMENDADO": "*Recomendado",
+				"CAMPOS_SUGERIDOS":"Se sugiere completar los siguientes campos",
 				"evolucion": {
 					"TITLE": "Evolucion",
 					"DESCRIPCION": "Descripcion"
@@ -34,9 +44,9 @@
 					"TEMPERATURA_CORPORAL_MIN": "La temperatura corporal mínima debe ser 0",
 					"SATURACION_OXIGENO_MIN": "La saturación de oxígeno mínima debe ser 0%",
 					"TENSION_DIASTOLICA_OBLIGATORIO": "Tensión arterial diastólica obligatorio",
-					"TENSION_DIASTOLICA_MIN": "Tensión arterial diastólica mínima debe ser 0 mm",
+					"TENSION_DIASTOLICA_MIN": "Tensión arterial diastólica mínima debe ser 0 mmHg",
 					"TENSION_SISTOLICA_OBLIGATORIO": "Tensión arterial sistólica obligatorio",
-					"TENSION_SISTOLICA_MIN": "Tensión arterial sistólica mínima debe ser 0 mm",
+					"TENSION_SISTOLICA_MIN": "Tensión arterial sistólica mínima debe ser 0 mmHg",
 					"TALLA_OBLIGATORIO": "Talla obligatorio",
 					"TALLA_MIN": "La talla mínima debe ser 0 cm",
 					"TALLA_MAX": "La talla máxima debe ser 1000 cm",
