tg-3184 Arregla longitud máxima permitida para nombres personales

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -53,7 +53,7 @@ patientmc.not.found=No se ha encontrado la cobertura
 
 ####### Person #######
 person.invalid=Persona desconocida
-
+person.name.max.value=Los nombres personales deben tener un máximo de 40 caracteres
 
 ####### Institution #######
 institution.invalid=Institución desconocida
