tg-3070 [FE] Pantalla de alta medica

--- a/front-end/webapp/src/assets/i18n/guardia/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/guardia/es-AR.json
@@ -130,6 +130,34 @@
 				"POLICE_INTERVENTION": "Intervención policial",
 				"UBICACION" : "Ubicación"
 			},
+			"medical_discharge": {
+				"TITLE": "Alta Médica",
+				"form": {
+					"DATE": "Fecha",
+					"TIME":"Hora",
+					"AUTOPSY": "Autopsia",
+					"DISCHARGE_TYPE": "Tipo de egreso"
+				},
+				"REQUIRED_PROBLEM": "Debe ingresar al menos un problema",
+				"messages": {
+					"SUCCESS": "El alta medica se guardó exitosamente",
+					"ERROR": "Ocurrió un error al intentar guardar el alta medica"
+				},
+				"problems": {
+					"buttons": {
+						"ADD": "Agregar problema"
+					},
+					"CONCEPT_LABEL": "Problema",
+					"CRONICO": "Crónico",
+					"errors": {
+						"FECHA_FIN_MIN": "La fecha de fin no puede ser anterior a la fecha de inicio"
+					},
+					"FECHA_FIN": "Fecha fin",
+					"FECHA_INICIO": "Fecha inicio",
+					"TABLE_TITLE": "Problemas registrados",
+					"TITLE": "Problema"
+				}
+			},
 			"triage": {
 				"HISTORIAL": "Historial de triages",
 				"NUEVO": "Nuevo triage",
