--- a/front-end/webapp/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/historia-clinica/es-AR.json
@@ -1,6 +1,11 @@
 {
   "historia-clinica": {
-    "summary-card": {
+	"summary-card": {
+		"evolution-notes-filter": {
+			"filterFieldIsRequiredWhenInputIsSet": "Debe seleccionar un tipo de filtro",
+			"filterInputIsRequiredWhenDateIsSelected": "Debe seleccionar una fecha",
+			"generalDateError":  "La fecha ingresada no es válida"
+		},
       "alergias": {
         "TOOLTIP": "Agregar alergia"
       },
