tg-3227 Se oculta accion de nuevo triage para episodios de guardia con alta medica y se agrega validacion en BE

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -152,6 +152,7 @@ health-insurance.not.found = Health Insurance does not exists
 ####### Emergency Care Episode #######
 careepisode.not.found = The episode was not found or does not exist
 state.not.found = Status was not found or does not exist
+care-episode.invalid-triage = Episode status must be 'waiting' or 'in attention' to add a new triage
 
 ####### Date #######
 date-dto.invalid-day = Day doesn't exists in month
