--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -169,6 +169,7 @@ health-insurance.not.found = La obra social no existe
 careepisode.not.found = El episodio de guardia no se encontró o no existe
 care-episode.patient.invalid = El paciente ya posee un episodio de guardia activo
 state.not.found=El estado no se encontró o no existe
+care-episode.invalid-triage = El estado del episodio debe ser 'en espera' o 'en atención' para agregar un nuevo triage
 
 ####### Date #######
 date-dto.invalid = El día ingresado no existe en el mes
