tg-3265 Se agregan validaciones a la fecha de alta medica en episodio de guardia

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -153,6 +153,8 @@ health-insurance.not.found = Health Insurance does not exists
 careepisode.not.found = The episode was not found or does not exist
 state.not.found = Status was not found or does not exist
 care-episode.invalid-triage = Episode status must be 'waiting' or 'in attention' to add a new triage
+care-episode.medical-discharge.exceeds-min-date = Medical discharge date must be after or equals to the episode creation date
+care-episode.medical-discharge.exceeds-max-date = Medical discharge date must be before or equals to actual date
 
 ####### Date #######
 date-dto.invalid-day = Day doesn't exists in month
