--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -170,6 +170,8 @@ careepisode.not.found = El episodio de guardia no se encontró o no existe
 care-episode.patient.invalid = El paciente ya posee un episodio de guardia activo
 state.not.found=El estado no se encontró o no existe
 care-episode.invalid-triage = El estado del episodio debe ser 'en espera' o 'en atención' para agregar un nuevo triage
+care-episode.medical-discharge.exceeds-min-date = La fecha debe ser posterior o igual a la fecha de creacion del episodio
+care-episode.medical-discharge.exceeds-max-date = La fecha debe ser anterior o igual a la fecha actual 
 
 ####### Date #######
 date-dto.invalid = El día ingresado no existe en el mes
