tg-3265 Se agregar validaciones a la fecha de alta administrativa de un episodio de guardia

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -155,6 +155,9 @@ state.not.found = Status was not found or does not exist
 care-episode.invalid-triage = Episode status must be 'waiting' or 'in attention' to add a new triage
 care-episode.medical-discharge.exceeds-min-date = Medical discharge date must be after or equals to the episode creation date
 care-episode.medical-discharge.exceeds-max-date = Medical discharge date must be before or equals to actual date
+care-episode.administrative-discharge.exceeds-min-date = Administrative discharge date must be after or equals to the medical discharge date
+care-episode.administrative-discharge.exceeds-max-date = Administrative discharge date must be before or equals to actual date
+care-episode.administrative-discharge.after-medical-discharge = Medical discharge needed before creating an administrative discharge
 
 ####### Date #######
 date-dto.invalid-day = Day doesn't exists in month
