--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -171,7 +171,10 @@ care-episode.patient.invalid = El paciente ya posee un episodio de guardia activ
 state.not.found=El estado no se encontró o no existe
 care-episode.invalid-triage = El estado del episodio debe ser 'en espera' o 'en atención' para agregar un nuevo triage
 care-episode.medical-discharge.exceeds-min-date = La fecha debe ser posterior o igual a la fecha de creacion del episodio
-care-episode.medical-discharge.exceeds-max-date = La fecha debe ser anterior o igual a la fecha actual 
+care-episode.medical-discharge.exceeds-max-date = La fecha debe ser anterior o igual a la fecha actual
+care-episode.administrative-discharge.exceeds-min-date = La fecha de alta administrativa debe ser posterior o igual a la fecha de alta medica del episodio
+care-episode.administrative-discharge.exceeds-max-date = La fecha de alta administrativa debe ser anterior o igual a la fecha actual 
+care-episode.administrative-discharge.after-medical-discharge = Se debe tener un alta medica para poder crear un alta administrativa
 
 ####### Date #######
 date-dto.invalid = El día ingresado no existe en el mes
