tg-3367 [BE] Crear endpoint para edicion de episodio de guardia

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -168,6 +168,10 @@ health-insurance.not.found = La obra social no existe
 ####### Emergency Care Episode #######
 careepisode.not.found = El episodio de guardia no se encontró o no existe
 care-episode.patient.invalid = El paciente ya posee un episodio de guardia activo
+care-episode.patient.invalid.update = El paciente no puede ser borrado del episodio
+care-episode.type.invalid.update = El tipo de episodio no puede ser borrado
+care-episode.entrance.invalid.update = La forma de ingreso no puede ser borrada del episodio
+care-episode.police.intervention.invalid.update = La intervencion policial no puede ser borrada
 state.not.found=El estado no se encontró o no existe
 care-episode.invalid-triage = El estado del episodio debe ser 'en espera' o 'en atención' para agregar un nuevo triage
 care-episode.medical-discharge.exceeds-min-date = La fecha debe ser posterior o igual a la fecha de creacion del episodio
