tg-3533 [P1] Fix error al consultar snomed

--- a/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/historia-clinica/es-AR.json
@@ -22,6 +22,10 @@
 	"procedimientos": {
 		"FECHA": "Fecha",
 		"PROCEDIMIENTO": "Procedimiento"
-	}
+	},
+	  "snowstorm": {
+		  "SERVICE_NOT_AVAILABLE": "El servicio externo no está disponible en este momento, por favor intente más tarde.",
+		  "CONCEPTS_COULD_NOT_BE_OBTAINED": "Los conceptos de SNOMED no pudieron ser obtenidos."
+	  }
   }
 }
