--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -90,6 +90,7 @@
 						"SAVE": "Guardar cambios"
 					},
 					"CONCEPT_LABEL": "Problema",
+					"SEVERIDAD": "Severidad",
 					"CRONICO": "Crónico",
 					"errors": {
 						"FECHA_FIN_MIN": "La fecha de fin no puede ser anterior a la fecha de inicio",
