tg-3523 [FE] Modificar componente de formulario en Alergias para poder cargar nuevo dato Criticidad

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -146,6 +146,7 @@
 					"TITLE": "Alergias",
 					"ADD": "Agregar alergia",
 					"ALLERGY": "Alergia",
+					"CRITICALITY": "Criticidad",
 					"form": {
 						"REGISTRY_DATE": "Fecha registro"
 					},
@@ -153,6 +154,7 @@
 						"TITLE": "Alergias registradas",
 						"columns": {
 							"ALLERGY": "Alergia",
+							"CRITICALITY": "Criticidad",
 							"REGISTRY_DATE": "Fecha registro"
 						}
 					}
